yaml-cpp doesn't compile on VS2013

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.5.5
    • Affects Version/s: None
    • Component/s: Build
    • None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      src\third_party\yaml-cpp-0.5.1\src\ostream_wrapper.cpp(24) : error C2039: 'max' : is not a member of 'std'                        
      src\third_party\yaml-cpp-0.5.1\src\ostream_wrapper.cpp(24) : error C3861: 'max': identifier not found                             
      src\third_party\yaml-cpp-0.5.1\src\ostream_wrapper.cpp(37) : error C2039: 'max' : is not a member of 'std'                        
      src\third_party\yaml-cpp-0.5.1\src\ostream_wrapper.cpp(37) : error C3861: 'max': identifier not found  
      

            Assignee:
            Eric Milkie
            Reporter:
            Eric Milkie
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: