SERVER-11778 add proper header for std::max