src/third_party/yaml-cpp-0.5.1/src/ostream_wrapper.cpp
@@ -1,6 +1,7 @@
 #include "yaml-cpp/ostream_wrapper.h"
 #include <cstring>
 #include <iostream>
+#include <algorithm>
 
 namespace YAML
 {
